--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-/.env
-/coverage
-/node_modules
-/package-lock.json
+node_modules
+coverage
+.env
+forumapi-ec2.pem
+package-lock.json
+config/database/test.json
